build: 完善构建